# rust_fantasy_football

./: README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: dockerimage.yml
api_gateway/: .env.sample  Cargo.toml  Dockerfile  docker-compose.ci.yml
api_gateway/scripts/: test.sh
api_gateway/src/: lib.rs
api_gateway/src/schema/: mod.rs  players_api.rs
api_gateway/tests/: common.rs  players_api_test.rs
auth_service/: Cargo.toml  docker-compose.ci.yml
players/: .env  Cargo.toml  Dockerfile
players/migrations/2020-01-29-195751_add_pgcrypto/: up.sql
players/migrations/2020-01-29-233235_create_players/: down.sql
players/migrations/2020-01-30-221013_create_teams/: down.sql
players/migrations/2020-01-30-222354_update_players_add_team_id/: down.sql
players/scripts/: migrate_test_db.sh
players/src/: lib.rs  schema.rs
players/src/common/: mod.rs
players/src/players/: mod.rs  models.rs
players/tests/: players_test.rs
players/tests/common/: db_connection.rs  mod.rs
players_api/: .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.ci.yml
players_api/migrations/2020-01-29-195751_add_pgcrypto/: down.sql
players_api/migrations/2020-01-29-233235_create_players/: up.sql
players_api/migrations/2020-01-30-221013_create_teams/: up.sql
players_api/migrations/2020-01-30-222354_update_players_add_team_id/: down.sql  up.sql
players_api/scripts/: migrate_test_db.sh  setup_postgres.sh  setup_postgres_test.sh  test.sh
players_api/src/: lib.rs
players_api/src/common/: mod.rs
players_api/src/common/common_derive/: Cargo.toml
players_api/src/common/common_derive/src/: lib.rs
players_api/src/players/: mod.rs  models.rs
players_api/src/seeds/: mod.rs  players.rs  teams.rs
players_api/src/teams/: mod.rs  models.rs
players_api/tests/: players_test.rs  teams_test.rs
players_api/tests/common/: db_connection.rs  mod.rs
