[package]
name = "api_gateway"
version = "0.1.0"
authors = ["Matthew Kuo <matthew.kuo@dialexa.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2"
actix-web = "2"
actix-rt = "1"
dotenv = "0.15.0"
env_logger = "0.7.1"
fake = { version = "2.2", features = ['derive'] }
futures = "0.3"
mockito = "0.23"
juniper = { version = "0.14.2", features = ["uuid"] }
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
uuid = { version = "0.7", features = ["serde", "v4"] }

[dev-dependencies]
actix-http = "1.0"
actix-http-test = "1.0"
serde_json = "1.0"

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
test = []
