[package]
name = "players"
version = "0.1.0"
authors = ["Matthew Kuo <matthew.kuo@dialexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
diesel = { version = "1.4", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
